--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,7 @@
                    aria-expanded="false">Admin<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li>@Html.ActionLink("users","List","User")</li>
+                    <li>@Html.ActionLink("Categories", "List","Category")</li>
                 </ul>
             </li>
         }
