--- a/Views/Article/Create.cshtml
+++ b/Views/Article/Create.cshtml
@@ -26,7 +26,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Tags, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m=> m.Tags, new string { @class = "form-control col-sm-4"}
+                    @Html.TextBoxFor(m=> m.Tags, new { @class = "form-control col-sm-4"})
                 </div>
             </div>
             <div class="form-group">
