--- a/Views/Article/Details.cshtml
+++ b/Views/Article/Details.cshtml
@@ -17,14 +17,17 @@
         <small class="author">
             --author @Model.Author.FullName
         </small>
+        <small class="info">
+            @Html.ActionLink(string.Format($"Comments ({Model.Comments.Count})"), "List", "Comment", new { @id = Model.Id }, null)
+        </small>
         <footer class="pull-right">
             @if (User.IsInRole("Admin") || Model.IsAuthor(User.Identity.Name))
             {
-            @Html.ActionLink("Edit", "Edit", "Article", new { @id = Model.Id }, new { @class = "btn btn-success btn-xs" })
-            @Html.ActionLink("Delete", "Delete", "Article", new { @id = Model.Id }, new { @class = "btn btn-danger btn-xs" })
+                @Html.ActionLink("Edit", "Edit", "Article", new { @id = Model.Id }, new { @class = "btn btn-success btn-xs" })
+                @Html.ActionLink("Delete", "Delete", "Article", new { @id = Model.Id }, new { @class = "btn btn-danger btn-xs" })
             }
             @Html.ActionLink("Back", "Index", "Article", null, new { @class = "btn btn-default btn-xs" })
-            
+
         </footer>
     </article>
 </div>
